--- a/my-app/src/app/shared/login-page/login-form/login-form.component.html
+++ b/my-app/src/app/shared/login-page/login-form/login-form.component.html
@@ -1,23 +1,31 @@
-<form action="#!">
+<form [formGroup]="userForm">
     <div class="row gy-3 overflow-hidden">
+        @if(!isFormValid){
+        <div class="alert alert-danger" role="alert">
+            Sorry, the user you where trying find could not be found
+        </div>
+        }
         <div class="col-12">
+            @if(userForm.controls['userName'].invalid && userForm.controls["userName"].touched ){
+            <p class="text-danger">Username is required</p>
+            }
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" name="email" id="email"
-                    placeholder="name@example.com" required>
-                <label for="email" class="form-label">Email</label>
+                <input type="userName" class="form-control" name="userName" id="userName" formControlName="userName">
+                <label for="userName" class="form-label">User Name</label>
             </div>
         </div>
         <div class="col-12">
+            @if(userForm.controls['password'].invalid && userForm.controls["password"].touched){
+            <p class="text-danger">Password is required</p>
+            }
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" name="password" id="password" value=""
-                    placeholder="Password" required>
+                <input type="password" class="form-control" name="password" id="password" formControlName="password">
                 <label for="password" class="form-label">Password</label>
             </div>
         </div>
         <div class="col-12">
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" name="remember_me"
-                    id="remember_me">
+                <input class="form-check-input" type="checkbox" name="remember_me" id="remember_me" formControlName="keepMeLoggedIn">
                 <label class="form-check-label text-secondary" for="remember_me">
                     Keep me logged in
                 </label>
@@ -25,7 +33,8 @@
         </div>
         <div class="col-12">
             <div class="d-grid">
-                <button class="btn bsb-btn-2xl btn-primary" type="submit">Log in now</button>
+                <button [class]=" userForm.valid? 'btn bsb-btn-2xl btn-primary' : 'btn bsb-btn-2xl btn-secondary disabled'" (click)="addUserClickHandler()" type="submit">Log in
+                    now</button>
             </div>
         </div>
     </div>
