--- a/my-app/src/app/pages/login/login.component.html
+++ b/my-app/src/app/pages/login/login.component.html
@@ -1,4 +1,3 @@
-<!-- Login 6 - Bootstrap Brain Component -->
 <section class=" p-3 p-md-4 p-xl-5">
     <div class="container">
         <div class="row justify-content-center">
@@ -14,7 +13,7 @@
                 <div class="col-12">
                     <hr class="mt-5 mb-4 border-secondary-subtle">
                     <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                        <a href="#!" class="link-secondary text-decoration-none">Create new user</a>
+                        <a href="create-user" class="link-secondary text-decoration-none">Create new user</a>
                         <a href="#!" class="link-secondary text-decoration-none">Forgot password</a>
                     </div>
                 </div>
