Added link to login page

--- a/my-app/src/app/pages/create-new-user/create-user.component.html
+++ b/my-app/src/app/pages/create-new-user/create-user.component.html
@@ -9,6 +9,15 @@
                 </div>
             </div>
             <create-user-form/>
+            <div class="row">
+                <div class="col-12">
+                    <hr class="mt-5 mb-4 border-secondary-subtle">
+                    <p>Already have a account?</p>
+                    <div class="d-flex gap-2 gap-md-4 ">
+                        <a href="login" class="link-secondary text-decoration-none">Sign in</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
