--- a/my-app/src/app/shared/components/bottom-home-header/bottom-home-header.component.html
+++ b/my-app/src/app/shared/components/bottom-home-header/bottom-home-header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom navbar-light bg-light px-5">
     <a class="navbar-brand" routerLink="home" routerLinkActive="active"><i class="bi bi-house-door-fill p-2"></i></a>
-    <button class="navbar-brand" ><i class="bi bi-camera-fill p-2"></i></button>
+    <a class="navbar-brand" routerLink="camera"><i class="bi bi-camera-fill p-2"></i></a>
     <a class="navbar-brand" routerLink="encryption" routerLinkActive="active"><i class="bi bi-lock-fill"></i></a>
 </nav>
