--- a/my-app/src/app/pages/login/login.component.html
+++ b/my-app/src/app/pages/login/login.component.html
@@ -13,8 +13,7 @@
                 <div class="col-12">
                     <hr class="mt-5 mb-4 border-secondary-subtle">
                     <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row">
-                        <a href="create-user" class="link-secondary text-decoration-none">Create new user</a>
-                        <a href="#!" class="link-secondary text-decoration-none">Forgot password</a>
+                        <a routerLink="/create-user" class="link-secondary text-decoration-none">Create new user</a>
                     </div>
                 </div>
             </div>
