Added a minimum view height

--- a/my-app/src/app/pages/home/home.component.html
+++ b/my-app/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <home-header></home-header>
-<div>
+<div class="min-vh-100">
     <router-outlet/>
 </div>
 <bottom-home-header></bottom-home-header>
