Added dummy data

--- a/my-app/src/app/pages/home/gallery/gallery.component.html
+++ b/my-app/src/app/pages/home/gallery/gallery.component.html
@@ -1,1 +1,71 @@
-<p>gallery works!</p>
+<div class="container">
+    <div class="gallery-grid">
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+        <div class="gallery-item">
+            <gallery-item></gallery-item>
+        </div>
+    </div>
+</div>
+
