--- a/my-app/src/app/shared/components/bottom-home-header/bottom-home-header.component.html
+++ b/my-app/src/app/shared/components/bottom-home-header/bottom-home-header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-bottom navbar-light bg-light px-5">
+<nav class="navbar fixed-bottom position-sticky navbar-light bg-light px-5">
     <a class="navbar-brand" routerLink="home" routerLinkActive="active"><i class="bi bi-house-door-fill p-2"></i></a>
     <a class="navbar-brand" routerLink="camera"><i class="bi bi-camera-fill p-2"></i></a>
     <a class="navbar-brand" routerLink="encryption" routerLinkActive="active"><i class="bi bi-lock-fill"></i></a>
