Add position sticky to prevent header nav from cover images

--- a/my-app/src/app/shared/components/home-header/home-header.component.html
+++ b/my-app/src/app/shared/components/home-header/home-header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="home-navbar navbar bg-light fixed-top position-sticky" [ngClass]="{'fade-out': isNavHidden}" >
     <div class="container-fluid">
       <br/>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
