Delete href from sign out

--- a/my-app/src/app/shared/components/home-header/home-header.component.html
+++ b/my-app/src/app/shared/components/home-header/home-header.component.html
@@ -11,7 +11,7 @@
           </li>
           <hr>
           <li>
-            <a class="nav-link active" href="#">Signout</a>
+            <a class="nav-link active">Signout</a>
           </li>
         </ul>
       </div>
