Made gallery item a clickable link

--- a/my-app/src/app/shared/gallery/gallery-item/gallery-item.component.html
+++ b/my-app/src/app/shared/gallery/gallery-item/gallery-item.component.html
@@ -1,1 +1,4 @@
-<div class=" w-100 h-100  bg-primary">dsa</div>
+<a routerLink="/home/picture-content" routerLinkActive="active" (click)="onClick()">
+    <div class=" w-100 h-100 bg-primary">
+    </div>
+</a>
