--- a/my-app/src/app/shared/gallery/gallery-item/gallery-item.component.html
+++ b/my-app/src/app/shared/gallery/gallery-item/gallery-item.component.html
@@ -1,4 +1,5 @@
 <a routerLink="/home/picture-content" routerLinkActive="active" (click)="onClick()">
-    <div class=" w-100 h-100 bg-primary">
+    <div class="gallery-item w-100 h-100 bg-primary">
+        dsa
     </div>
 </a>
