Updated header nav bottom and top name and import paths

--- a/my-app/src/app/pages/home/home.component.html
+++ b/my-app/src/app/pages/home/home.component.html
@@ -1,5 +1,4 @@
-<home-header></home-header>
 <div class="min-vh-100">
     <router-outlet/>
 </div>
-<bottom-home-header></bottom-home-header>
+<bottom-header-nav></bottom-header-nav>
