--- a/my-app/src/app/pages/home/account/account.component.html
+++ b/my-app/src/app/pages/home/account/account.component.html
@@ -1,3 +1,4 @@
+<top-header-nav headerTitle="Account"></top-header-nav>
 <div  class="d-flex flex-column text-center">
   <h1>account</h1>
   <div class="text-start">
@@ -15,12 +16,12 @@
         </div>
         <div>
           @if(!updateMode){
-            <button (click)="deleteUser()" class="btn btn-danger mx-1">Delete User</button>
-            <button type="button" (click)="updatePasswordClickHandler()" class="btn btn-primary">Update Password</button>
+            <button (click)="deleteUser()" class="btn btn-danger mx-1">Delete</button>
+            <button type="button" (click)="updatePasswordClickHandler()" class="btn btn-primary">Update</button>
           }
           @if(updateMode){
             <button (click)="cancelClickHandler()" class="btn btn-danger mx-1">Cancel</button>
-            <button (click)="updateUser()" type="button" class="btn btn-primary">Update</button>
+            <button (click)="updateUser()" type="button" class="btn btn-success">Update</button>
           }
         </div>
     </form>
