Updated signout link

--- a/my-app/src/app/shared/components/top-header-nav/top-header-nav.component.html
+++ b/my-app/src/app/shared/components/top-header-nav/top-header-nav.component.html
@@ -16,7 +16,7 @@
           </li>
           <hr>
           <li>
-            <a class="nav-link active">Signout</a>
+            <a routerLink="/login" routerLinkActive="active" (click)="signOutClickHandler()" class="nav-link active">Sign out</a>
           </li>
         </ul>
       </div>
