--- a/my-app/src/app/pages/home/camera/camera.component.html
+++ b/my-app/src/app/pages/home/camera/camera.component.html
@@ -1,4 +1,5 @@
-<div class="text-center m-3">
-
+<top-header-nav></top-header-nav>
+<div class="text-center container">
   <img [src]="imgsrc" width="80%" alt="Image placeholder">
 </div>
+<camera-form></camera-form>
