Added a submit button

--- a/my-app/src/app/shared/camera-page/camera-form/camera-form.component.html
+++ b/my-app/src/app/shared/camera-page/camera-form/camera-form.component.html
@@ -1,10 +1,13 @@
-<form [formGroup]="itemForm" class="container">
+<form [formGroup]="itemForm" (submit)="savePhoto()" class="container">
     <div class="form-group">
         <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" name="description" id="description" formControlName="description" rows="4"> </textarea>
+        <textarea class="form-control" name="description" id="description" formControlName="description" placeholder="Description" rows="4"> </textarea>
     </div>
     <div class="form-group">
         <label class="form-label" for="date">Date</label>
         <input type="date" name="date" class="form-control" formControlName="date" >
+    </div>
+    <div class="py-1">
+        <button type="submit" class="btn btn-primary mx-1">Save</button>
     </div>
 </form>
