added picture content form

--- a/my-app/src/app/pages/home/picture-content/picture-content.component.html
+++ b/my-app/src/app/pages/home/picture-content/picture-content.component.html
@@ -1,3 +1,4 @@
 <pic-top-header-nav></pic-top-header-nav>
-<div class="cont">
+<div class="cont container">
+    <picture-content-form></picture-content-form>
 </div>
