Added a click function for going back a page

--- a/my-app/src/app/shared/picture-content-page/top-header-nav/top-header-nav.component.html
+++ b/my-app/src/app/shared/picture-content-page/top-header-nav/top-header-nav.component.html
@@ -1,6 +1,6 @@
 <nav class="home-navbar navbar bg-light fixed-top position-sticky py-3" >
     <div class="container-fluid">
-      <div>
+      <div (click)="goBack()">
         <a>Back</a>
       </div>
       <div>
