--- a/my-app/src/app/shared/picture-content-page/picture-content-form/picture-content-form.component.html
+++ b/my-app/src/app/shared/picture-content-page/picture-content-form/picture-content-form.component.html
@@ -11,6 +11,7 @@
         <input type="date" name="date" formControlName="date" class="form-control" >
     </div>
     <div class="py-1">
-        <button type="submit" class="btn btn-primary mx-1">Edit</button>
+        <button type="button" class="btn btn-primary mx-1" (click)="editGalleryItem()">Edit</button>
+        <button type="button" class="btn btn-primary mx-1" (click)="deleteGalleryItem()">Delete</button>
     </div>
 </form>
