--- a/my-app/src/app/shared/picture-content-page/picture-content-form/picture-content-form.component.html
+++ b/my-app/src/app/shared/picture-content-page/picture-content-form/picture-content-form.component.html
@@ -10,11 +10,13 @@
         <label class="form-label" for="date">Date</label>
         <input type="date" name="date" formControlName="date" class="form-control" >
     </div>
-    <div id="geo-container" style="width: auto; height: 25vh; margin: 2em;">
-
-    </div>
+    
     <div class="py-1">
         <button type="button" class="btn btn-primary mx-1" (click)="editGalleryItem()">Edit</button>
         <button type="button" class="btn btn-primary mx-1" (click)="deleteGalleryItem()">Delete</button>
     </div>
 </form>
+
+<div id="geo-container" style="width: auto; height: 25vh; margin-top: 2em;">
+
+</div>
