--- a/my-app/src/app/shared/picture-content-page/picture-content-form/picture-content-form.component.html
+++ b/my-app/src/app/shared/picture-content-page/picture-content-form/picture-content-form.component.html
@@ -8,9 +8,9 @@
     </div>
     <div class="form-group">
         <label class="form-label" for="date">Date</label>
-        <input type="date" name="date" formControlName="date" class="form-control" >
+        <input type="date" name="date" id="date" formControlName="date" class="form-control" >
     </div>
-    
+
     <div class="py-1">
         <button type="button" class="btn btn-primary mx-1" (click)="editGalleryItem()">Edit</button>
         <button type="button" class="btn btn-primary mx-1" (click)="deleteGalleryItem()">Delete</button>
