Added click event to encrypt

--- a/my-app/src/app/shared/picture-content-page/top-header-nav/top-header-nav.component.html
+++ b/my-app/src/app/shared/picture-content-page/top-header-nav/top-header-nav.component.html
@@ -7,7 +7,7 @@
         </strong>
       </div>
       <div>
-        <a>Encrypt</a>
+        <a (click)="encryptClickHandler()">Encrypt</a>
       </div>
     </div>
   </nav>
