Added different buttons for if image is encrypted

--- a/my-app/src/app/shared/picture-content-page/top-header-nav/top-header-nav.component.html
+++ b/my-app/src/app/shared/picture-content-page/top-header-nav/top-header-nav.component.html
@@ -7,7 +7,12 @@
         </strong>
       </div>
       <div>
-        <a (click)="encryptClickHandler()">Encrypt</a>
+        @if(!isEncrypt){
+          <a (click)="encryptClickHandler()">Encrypt</a>
+        }
+        @if(isEncrypt){
+          <a (click)="decryptClickHandler()">Decrypt</a>
+        }
       </div>
     </div>
   </nav>
