--- a/my-app/src/app/pages/home/account/account.component.html
+++ b/my-app/src/app/pages/home/account/account.component.html
@@ -1,5 +1,5 @@
 <top-header-nav headerTitle="Account"></top-header-nav>
 <div  class="d-flex flex-column text-center">
-  <h1>account</h1>
+  <h1>Account</h1>
   <account-form></account-form>
 </div>
