--- a/my-app/src/app/pages/home/camera/camera.component.html
+++ b/my-app/src/app/pages/home/camera/camera.component.html
@@ -1,5 +1,5 @@
 <top-header-nav></top-header-nav>
 <div class="text-center container">
-  <img [src]="imgsrc" width="80%" alt="Image placeholder" />
+  <img [src]="imgSrc" width="80%" alt="Image placeholder" />
 </div>
-<camera-form [imgsrc]="imgsrc"></camera-form>
+<camera-form [imgsrc]="imgSrc"></camera-form>
