--- a/my-app/src/app/shared/components/bottom-header-nav/bottom-header-nav.component.html
+++ b/my-app/src/app/shared/components/bottom-header-nav/bottom-header-nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom position-sticky navbar-light bg-light px-5">
-    <a class="navbar-brand" routerLink="home" routerLinkActive="active"><i class="bi bi-house-door-fill p-2"></i></a>
-    <a class="navbar-brand" (click)="onCapturePhotoClick()"><i class="bi bi-camera-fill p-2"></i></a>
-    <a class="navbar-brand" routerLink="gallery" routerLinkActive="active"><i class="bi bi-grid-3x3-gap"></i></a>
+    <a class="navbar-brand" routerLink="home" routerLinkActive="active"><mat-icon>home</mat-icon></a>
+    <a class="navbar-brand" (click)="onCapturePhotoClick()"><mat-icon>camera_alt</mat-icon></a>
+    <a class="navbar-brand" routerLink="gallery" routerLinkActive="active"><mat-icon>photo_library</mat-icon></a>
 </nav>
