--- a/my-app/src/app/pages/home/setting/account-info/account-info.component.html
+++ b/my-app/src/app/pages/home/setting/account-info/account-info.component.html
@@ -24,19 +24,28 @@
         <section>
             <h1>Change Password</h1>
             <p>Password change will happen immediately. If user forgets password there is no way of changing said password back.</p>
-            <form>
+            <form [formGroup]="changePassFrm" (submit)="passChangeSubmitHandler()">
                 <mat-form-field class="container-fluid">
                     <mat-label>Current password</mat-label>
-                    <input matInput>
+                    <input formControlName="curPassword"  matInput>
                 </mat-form-field>
-                <mat-form-field class="container-fluid">
-                    <mat-label>New password</mat-label>
-                    <input matInput>
-                </mat-form-field>
-                <mat-form-field class="container-fluid">
-                    <mat-label>Re-type new password</mat-label>
-                    <input matInput>
-                </mat-form-field>
+                <div formGroupName="passwordGroup">
+                    @if(changePassFrm.controls.passwordGroup.errors?.['inValidPass'] && rePassword.touched){
+                        <p class="text-danger">Password must match</p>
+                    }
+
+                    @if(changePassFrm.controls.passwordGroup.errors?.['passValuesBlank'] && rePassword.touched && newPassword.touched){
+                        <p class="text-danger">Fields are required</p>
+                    }
+                    <mat-form-field class="container-fluid">
+                        <mat-label>New password</mat-label>
+                        <input formControlName="newPassword" matInput>
+                    </mat-form-field>
+                    <mat-form-field class="container-fluid">
+                        <mat-label>Re-type new password</mat-label>
+                        <input formControlName="rePassword" matInput>
+                    </mat-form-field>
+                </div>
                 <button mat-flat-button color="primary" class="container-fluid rounded"> Change password</button>
             </form>
         </section>
