--- a/my-app/src/app/pages/home/setting/database/database.component.html
+++ b/my-app/src/app/pages/home/setting/database/database.component.html
@@ -1,1 +1,15 @@
-<p>database works!</p>
+<div id="slid-wrapper" class="container py-4">
+    <mat-card>
+        <mat-card-title>
+            <mat-card-header>Database</mat-card-header>
+        </mat-card-title>
+        <mat-card-actions class="container-fluid d-flex justify-content-between">
+            <button mat-button >Clear Photos</button>
+            <mat-icon>keyboard_arrow_right</mat-icon>
+        </mat-card-actions>
+        <mat-card-actions class="container-fluid d-flex justify-content-between">
+            <button mat-button >Manage users</button>
+            <mat-icon>keyboard_arrow_right</mat-icon>
+        </mat-card-actions>
+    </mat-card>
+</div>
